# hexlet-git

./: NEW.md  sqrt.py
first/: pyproject.toml
hello/: pyproject.toml
hello/hello/scripts/: say_hello.py
