[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["DenL315 <143326142+DenL315@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
